--- a/style.css
+++ b/style.css
@@ -9,16 +9,14 @@ body {
 .container {
   display: grid;
   grid-auto-rows: minmax(100px, auto);
-  max-width: 960px;
   margin: 0 auto;
-  grid-gap: 10px;
+  grid-gap: 8px;
   grid-template-areas:
     "navbar navbar navbar navbar"
-    "footer footer footer footer"
     "banner banner banner banner"
-    "main main main main"
-    "main main main main";
-  grid-template-rows: 1fr 2fr 5fr 1fr;
+    "sidebar main main main"
+    "footer footer footer footer";
+  grid-template-rows: 1fr;
   grid-template-columns: repeat(4 1fr);
 }
 
@@ -32,7 +30,7 @@ body {
     grid-template-areas:
       "navbar navbar navbar navbar"
       "banner banner banner banner"
-      "main main main main"
+      "sidebar main main main"
       "footer footer footer footer";
     grid-template-rows: 1fr 1fr 5fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
