--- a/admin.css
+++ b/admin.css
@@ -57,3 +57,14 @@
 .label-item {
   margin-top: 10px;
 }
+
+.hidden {
+  display: none;
+}
+
+.success {
+  background-color: lightgreen;
+}
+.error {
+  background-color: red;
+}
