--- a/cart.css
+++ b/cart.css
@@ -6,7 +6,7 @@
   color: rgb(0, 0, 0);
   align-items: center;
   height: 90px;
-  background-color: rgb(126, 145, 121);
+  background-color: #89cff0;
 }
 
 .logo-pic {
