--- a/cart.css
+++ b/cart.css
@@ -1,12 +1,21 @@
+body{
+  background-color: rgba(0, 0, 0, 0.751) !important;
+
+}
+
 #navbar {
-  grid-area: navbar;
   display: flex;
   justify-content: space-around;
   border: 1px solid black;
   color: rgb(0, 0, 0);
   align-items: center;
   height: 90px;
-  background-color: #89cff0;
+  background: hsla(113, 96%, 81%, 1);
+  background: linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
+  background: -moz-linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
+  background: -webkit-linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#ADFDA2", endColorstr="#11D3F3", GradientType=1 );
+  margin-bottom: 4rem;
 }
 
 .logo-pic {
@@ -31,3 +40,12 @@
 #navbar a:hover {
   color: rgb(0, 0, 0);
 }
+
+
+
+.cardStyle{
+  background-color: rgb(197, 239, 185) !important;
+  width: 140vh;
+  left: 18%;
+}
+
