--- a/details.css
+++ b/details.css
@@ -1,6 +1,6 @@
 .product-details {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
@@ -14,11 +14,14 @@
   grid-area: navbar;
   display: flex;
   justify-content: space-around;
-  /* border: 1px solid black; */
   color: rgb(0, 0, 0);
   align-items: center;
   height: 90px;
-  background-color: #89cff0;
+  background: hsla(113, 96%, 81%, 1);
+  background: linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
+  background: -moz-linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
+  background: -webkit-linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#ADFDA2", endColorstr="#11D3F3", GradientType=1 );
   margin-bottom: 10px;
 }
 
