--- a/cart.css
+++ b/cart.css
@@ -1,13 +1,16 @@
 body{
-  background-color: rgba(0, 0, 0, 0.751) !important;
-
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
 
 #navbar {
+  grid-area: navbar;
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
   color: rgb(0, 0, 0);
+  border-radius: 9px;
   align-items: center;
   height: 90px;
   background: hsla(113, 96%, 81%, 1);
@@ -15,15 +18,19 @@ body{
   background: -moz-linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
   background: -webkit-linear-gradient(90deg, hsla(113, 96%, 81%, 1) 0%, hsla(188, 90%, 51%, 1) 100%);
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#ADFDA2", endColorstr="#11D3F3", GradientType=1 );
-  margin-bottom: 4rem;
+  margin-bottom: 22px;
+}
+
+#form1{
+  text-align: center;
+  width: 50%;
 }
 
 .logo-pic {
   height: 70px;
 }
 .nav-list {
-  padding: 0;
-  margin: 0;
+  margin-right: 10px;
   list-style-type: none;
   width: 100%;
   text-align: end;
@@ -41,11 +48,45 @@ body{
   color: rgb(0, 0, 0);
 }
 
+.total{
+  background-color: brown;
+  color: rgb(0, 0, 0);
+  width: 20%;
+  border-radius: 10px;
+  background-color: rgb(197, 239, 185);
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+.totalPrice{
+  margin-bottom: 40px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.h-100{
+  background-color: rgb(197, 239, 185);
 
-
+}
+.d-flex, .text-muted{
+  color: rgb(0, 0, 0) !important;
+  
+}
 .cardStyle{
-  background-color: rgb(197, 239, 185) !important;
-  width: 140vh;
-  left: 18%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.rounded-3{
+  width: 70%;
 }
 
+.productsInCart{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-body{
+width: 90%;
+}
